Fix network service not working when running as a remote app before Windows 8.

r562058 made the network process always run in a job object to try to avoid it outliving the browser process. This was added to make the network process quit sooner if there was a lot of pending I/O, which happened with layout tests. Windows before version 8 doesn't support nested job objects though, so we need to stop this mitigation for those old versions.

Bug: 904361
Change-Id: If75fc933052b1b7d4ef3d3e90664f777624c04d7
Reviewed-on: https://chromium-review.googlesource.com/c/1350977
Commit-Queue: John Abd-El-Malek <jam@chromium.org>
Reviewed-by: Julian Pastarmov <pastarmovj@chromium.org>
Reviewed-by: James Forshaw <forshaw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611856}
Former-commit-id: 5f4aded6a8c46612f1cc837e667d293968aec1c8