services/service_manager/sandbox/win/sandbox_win.cc
@@ -860,7 +860,12 @@ sandbox::ResultCode SandboxWin::StartSandboxedProcess(
           service_manager::switches::kNoSandbox)) {
     base::LaunchOptions options;
     options.handles_to_inherit = handles_to_inherit;
-    if (sandbox_type == SANDBOX_TYPE_NETWORK) {
+    BOOL in_job = true;
+    // Prior to Windows 8 nested jobs aren't possible.
+    if (sandbox_type == SANDBOX_TYPE_NETWORK &&
+        (base::win::GetVersion() >= base::win::VERSION_WIN8 ||
+         (::IsProcessInJob(::GetCurrentProcess(), nullptr, &in_job) &&
+          !in_job))) {
       // Launch the process in a job to ensure that the network process doesn't
       // outlive the browser. This could happen if there is a lot of I/O on
       // process shutdown, in which case TerminateProcess would fail.
